--- a/Bao_cao/report_MM.tex
+++ b/Bao_cao/report_MM.tex
@@ -183,46 +183,54 @@ KHOA KHOA HỌC - KỸ THUẬT MÁY TÍNH
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \section{Bài toán 1}
 \subsection{Lịch sử của hợp đồng thông minh (smart contracts)}
-Cụm từ "smart contacts" (hợp đồng thông minh) được đặt ra bởi nhà khoa học máy tính và mật mã học Nick Szabo năm 1994 và đã được nghiên cứu qua nhiều năm. Nguyên lý hoạt động của nó được Szabo mô tả năm 1996 trong bài báo có tiêu đề "Smart Contracts: Building Blocks for Digital Markets" trên tạp chí Extropy [Sza96], rất lâu trước khi công nghệ blockchain ra đời. Theo ý tưởng của Szabo, smart contracts là những giao thức kỹ thuật số cho việc chuyển dịch thông tin, sử dụng các giải thuật toán học để thực thi các giao dịch một cách tự động một khi các điều khoản được thỏa và dùng để kiểm soát hoàn toàn quá trình này. Định nghĩa đã đi trước thời đại đến hơn 10 năm này vẫn còn đúng cho đến ngày nay. Tuy nhiên vào năm 1996, ý tưởng này vẫn chưa được đón nhận vì các công nghệ cần thiết để vận hành chưa ra đời, cụ thể là sổ cái phân tán (distributed ledger).\\
+Cụm từ "smart contacts" (hợp đồng thông minh) được đặt ra bởi nhà khoa học máy tính và mật mã học Nick Szabo năm 1994 và đã được nghiên cứu qua nhiều năm. Nguyên lý hoạt động của nó được Szabo mô tả năm 1996 trong bài báo có tiêu đề "Smart Contracts: Building Blocks for Digital Markets" trên tạp chí Extropy [Sza96], rất lâu trước khi công nghệ blockchain ra đời. Theo ý tưởng của Szabo, smart contracts là những giao thức kỹ thuật số cho việc chuyển dịch thông tin, sử dụng các giải thuật toán học để thực thi các giao dịch một cách tự động một khi các điều khoản được thỏa và dùng để kiểm soát hoàn toàn quá trình này. Định nghĩa đã đi trước thời đại đến hơn 10 năm này vẫn còn đúng cho đến ngày nay. Tuy nhiên vào năm 1996, ý tưởng này vẫn chưa được đón nhận vì các công nghệ cần thiết để vận hành chưa ra đời, cụ thể là sổ cái phân tán (distributed ledger). \\
 
-Vào năm 2008, Bitcoin, đồng tiền kỹ thuật số hoàn chỉnh đầu tiên, đã được tạo ra dựa trên cơ sở của công nghệ blockchain. Blockchain của Bitcoin không cho phép các điều kiện, để kết thúc 1 giao dịch, được quy định trên một khối (block) mới vì nó chỉ chứa các thông tin giao dịch. Dù sao đi nữa, sự xuất hiện của blockchain đã trở thành nguồn động lực để phát triển smart contracts. Năm 2013, nền tảng blockchain Ethereum đã giúp cho việc đưa smart contracts vào thực tế. Ngày nay, mặc dù thị trường đã cung cấp nhiều nền tảng cho phép sử dụng smart contracts nhưng Ethereum vẫn được sử dụng nhiều nhất.
+Vào năm 2008, Bitcoin, đồng tiền kỹ thuật số hoàn chỉnh đầu tiên, đã được tạo ra dựa trên cơ sở của công nghệ blockchain. Blockchain của Bitcoin không cho phép các điều kiện, để kết thúc 1 giao dịch, được quy định trên một khối (block) mới vì nó chỉ chứa các thông tin giao dịch. Dù sao đi nữa, sự xuất hiện của blockchain đã trở thành nguồn động lực để phát triển smart contracts. Năm 2013, nền tảng blockchain Ethereum đã giúp cho việc đưa smart contracts vào thực tế. Ngày nay, mặc dù thị trường đã cung cấp nhiều nền tảng cho phép sử dụng smart contracts nhưng Ethereum vẫn được sử dụng nhiều nhất. 
 
 \subsection{Ứng dụng của hợp đồng thông minh}
-
+Đây chỉ là một số trong số rất nhiều ứng dụng của hợp đồng thông minh.
 \subsubsection{Ứng dụng vào bảo hiểm}
-Smart contract giúp cải thiện trải nghiệm của người dùng cũng như giảm thiểu những sai sót và chi phí trong quá trình giao dịch bảo hiểm. Blockchain cũng như Smart contract tăng tốc quá trình xử lí yêu cầu/trao trả bảo hiểm, tránh được những lỗi sai sót so với làm bằng tay.\\
+Smart contract giúp cải thiện trải nghiệm của người dùng cũng như giảm thiểu những sai sót và chi phí trong quá trình giao dịch bảo hiểm. Blockchain cũng như Smart contract tăng tốc quá trình xử lí yêu cầu/ trao trả bảo hiểm, tránh được những lỗi sai sót so với làm bằng tay.\\
+Smart contract cũng giúp tự động hoá việc chuyển tiền đến người sử dụng bảo hiểm và cũng đảm bảo được hợp đồng là hợp lệ. Ví dụ như một người sửa xe của anh ấy chỉ nhận được tiền bảo hiểm nếu anh ta sửa xe tại cửa hàng được chứng nhận và phải có sự xác nhận bởi người thợ sửa xe đó. Một ví dụ khác, smart contract có thể ghi lại các thông tin về thời tiết lên blockchain, sau đó nó đọc thông tin này và trả tiền bồi thường cho chuyến bay của những hành khách mà bị huỷ hay bị hoãn do thời tiết xấu. Nó cũng có thể kết hợp với công nghệ IoT và các cảm biến để theo dõi sự hư tổn của các thiết bị trong nhà để có thể tự động đền bù hoặc hỗ trợ chủ nhân ngôi nhà gọi người sửa chữa đến.
 
-Ứng dụng này cũng giúp tự động hoá việc chuyển tiền đến người sử dụng bảo hiểm và cũng đảm bảo được hợp đồng là hợp lệ. Ví dụ như một người sửa xe của anh ấy chỉ nhận được tiền bảo hiểm nếu anh ta sửa xe tại cửa hàng được chứng nhận và phải có sự xác nhận bởi người thợ sửa xe đó.
-Dự đoán các thông tin từ thế giới thực. Ví dụ, Smart contract có thể ghi lại các thông tin về thời tiết lên Blockchain, sau đó nó đọc thông tin này và trả tiền bồi thường cho chuyến bay của những hành khách mà bị huỷ hay bị hoãn do thời tiết xấu.\\
+\subsubsection{Ứng dụng trong chuỗi cung ứng(logistic)}
 
-Kết hợp với IoT và các cảm biến để theo dõi sự hư tổn của các thiết bị trong nhà để có thể tự động đền bù hoặc hỗ trợ chủ nhân ngôi nhà gọi người sửa chữa đến.
-
-\subsubsection{Ứng dụng trong chuỗi cung ứng}
-
-Smart contract giúp giảm chi phí lưu trữ đồng thời cải thiện việc quản lí chuỗi cung ứng tốt hơn, cho phép lưu lại mọi thông tin, thao tác dù là rất nhỏ theo chiều đi của sản phẩm mà không làm ảnh hưởng gì đến dữ liệu.\\
-
-Tăng tính bảo mật, an toàn và rõ ràng trong chuỗi cung ứng. Một khi dữ liệu đã được xác thực và lưu lại thì không thể thay đổi hay đánh cắp nhờ các kết nối thông minh và một số điều kiện mã hoá kèm theo để xác nhận giao dịch là hợp lệ. Doanh nghiệp cũng có thể tăng thêm tính tin tưởng của khách hàng khi cho họ theo dõi quá trình giao dịch, từ đó tăng thêm lợi thế cạnh tranh cho công ty của mình.\\
-
-Dễ dàng theo dõi và khắc phục lỗi do có sự lưu trữ dữ liệu theo phân cấp thời gian.
+Smart contract giúp giảm chi phí lưu trữ đồng thời cải thiện việc quản lí chuỗi cung ứng tốt hơn, cho phép lưu lại mọi thông tin, thao tác dù là rất nhỏ theo chiều đi của sản phẩm. Nó giúp tăng tính bảo mật, an toàn và rõ ràng trong chuỗi cung ứng. Một khi dữ liệu đã được xác thực và lưu lại thì không thể thay đổi hay đánh cắp nhờ các kết nối thông minh và một số điều kiện mã hoá kèm theo để xác nhận giao dịch là hợp lệ. Doanh nghiệp sẽ nhận được nhiều hơn sự tin tưởng của khách hàng khi cho họ theo dõi quá trình giao dịch, từ đó tăng thêm lợi thế cạnh tranh cho công ty của mình. Bên cạnh đó, smart contract giúp người quản lý dễ dàng theo dõi và khắc phục lỗi do có sự lưu trữ dữ liệu theo phân cấp thời gian.
 
 \subsubsection{Ứng dụng trong việc vay thế chấp}
-Smart contract giúp tăng thêm tính bảo mật cho người sử dụng để vay mượn tiền, cung cấp chức năng cho phép người cho vay đặt ra các yêu cầu với người vay tiền như là thời gian vay mượn, số tiền cho vay, lãi suất bao nhiêu phần trăm, v.v .\\
+Smart contract giúp tăng thêm tính bảo mật cho người sử dụng để vay mượn tiền, cung cấp chức năng cho phép người cho vay đặt ra các yêu cầu với người vay tiền như là thời gian vay mượn, số tiền cho vay, lãi suất bao nhiêu phần trăm, v.v Hợp đồng thông minh này có thể tự động và đảm bảo người mượn phải trả đúng thời hạn, nếu không hệ thống sẽ tự động lấy tài sản mà người vay đã thế chấp để bù vào những phần bị trễ hạn cho người cho vay.\\
 
 Hợp đồng thông minh này có thể tự động và đảm bảo người mượn phải trả đúng thời hạn, nếu không hệ thống sẽ tự động lấy tài sản mà người vay đã thế chấp để bù vào những phần bị trễ hạn cho người cho vay.
 
 \subsubsection{Ứng dụng trong hợp đồng việc làm}
-Loại hình hợp đồng thông minh này giúp cho doanh nghiệp có thể giảm sai sót, chi phí cũng như thời gian trong việc phát lương cho người lao động.\\
-
-Đảm bảo người lao động chấp hành tất cả những điều khoản đã đề ra trong hợp đồng, bởi vì hợp đồng thông minh này sử dụng công nghệ Blockchain, không thể bị chỉnh sửa hay lấy cắp.\\
-
-Bảo vệ quyền lợi của người lao động, tránh tình trạng bị thiếu lương, mất lương.
+Loại hình hợp đồng thông minh này giúp cho doanh nghiệp có thể giảm sai sót, chi phí cũng như thời gian trong việc phát lương cho người lao động. Nó cũng đảm bảo người lao động chấp hành tất cả những điều khoản đã đề ra trong hợp đồng, bởi vì hợp đồng thông minh này sử dụng công nghệ Blockchain, không thể bị chỉnh sửa hay lấy cắp. Đồng thời, smart contract cũng sẽ bảo vệ quyền lợi của người lao động, tránh tình trạng bị thiếu lương, mất lương.
 
 \subsubsection{Ứng dụng trong bảo vệ nội dung bản quyền}
 Smart contract ghi lại hoạt động có liên quan đến bản quyền sản phẩm,theo dõi các hoạt động của sản phẩm của mình trên internet, từ đó có thể giúp cho tác giả hay người tạo ra sản phẩm biết được những hành vi vi phạm bản quyền.
 
+\subsubsection{Ứng dụng trong bầu cử}
+Sử dụng hợp đồng thông minh giúp việc bầu cử trở nên công khai nhưng vô cùng bảo mật, an toàn, tránh được sự can thiệp vào kết quả bầu cử. Người bầu cử có thể sử dụng internet để bầu mà không cần phải xếp hàng dài chờ đợi ở các địa điểm bầu cử nhưng vẫn bảo đảm được tính đúng đắn của lá phiếu cũng như tính riêng tư với lựa chọn của họ. Điều này khuyến khích người dân tham gia vào các quyết định có ảnh hưởng đến sự phát triển của xã hội, làm tăng sự tin tưởng của người dân với chính quyền.
+
+\subsubsection{Ứng dụng trong lĩnh vực tài chính thương mại}
+Hợp đồng thông minh có thể cho phép việc chuyển giao hàng hóa quốc tế thông qua thư tín dụng nhanh và thanh toán thương mại, đồng thời cho phép thanh khoản tài sản tài chính lớn hơn. Nó cũng có thể cải thiện hiệu quả tài chính cho người mua, nhà cung cấp và tổ chức.
+
+\subsubsection{Ứng dụng trong lĩnh vực y tế, chăm sóc sức khỏe}
+Trong tương lai, có thể hồ sơ y tế cá nhân sẽ được mã hóa và được lưu trữ trên blockchain với quyền truy cập duy nhất cho một cá nhân cụ thể. Các biên lai cho việc chi trả viện phí, dịch vụ chăm sóc sức khỏe, thuốc thang cũng sẽ được lưu trữ trên blockchain mà từ đó các hợp đồng thông minh có thể tự động kiểm tra và thực hiện việc hoàn phí theo các quy định của bảo hiểm y tế, tai nạn. Nó cũng có thể giúp tự động thực hiện các hỗ trợ tài chính đối với các cá nhân hiến máu, hiến tạng, hay tình nguyện làm các đối tượng nghiên cứu, tham gia các thử nghiệm y học.
+
+\subsubsection{Ứng dụng trong bất động sản}
+Với hợp đồng thông minh, chúng ta sẽ không phải mất phí cho các bên trung gian (môi giới) khi muốn thuê/cho thuê, bán/mua nhà, căn hộ,... Nó sẽ bắt các bên tham gia phải thực hiện đúng các yêu cầu trước thời hạn để thực hiện giao dịch (người thuê phải trả tiền, người cho thuê phải giao mã khóa vào nhà; tiền và khóa được hợp đồng giữ lại). Nếu một trong hai không thực hiện yêu cầu thì hợp đồng bị hủy và những gì hợp đồng đang giữ sẽ được trả cho người gửi tương ứng. Nó cũng giúp người cho thuê tự động quản lý vấn đề tiền thuê nhà (nếu quá hạn mà hợp đồng chưa nhận được tiền thuê, mã khóa nhà sẽ bị thay đổi).
+
+
+\subsubsection{Hợp đồng thông minh trong thời đại IoT}
+Mạng lưới "vạn vật kết nối Internet" sẽ mang lại cho mọi thiết bị trong cuộc sống hàng ngày khả năng kết nối với Internet, và do đó là khả năng kết nối đến hệ thống blockchain. Từ đó áp dụng hợp đồng thông minh vào blockchain, chúng ta sẽ biến gần như mọi giao dịch, trao đổi hàng ngày thành hoàn toàn tự động nhưng vẫn đảm bảo được tính chính xác của các giao dịch. Các cảm biến ở mọi nơi, hệ thống định vị vị trí,... giúp hợp đồng thông minh dễ dàng xác định được vị trí của gói hàng, kiểm tra được gói hàng đã đến vị trí của người nhận hay chưa, từ đó tự thực hiện các giao dịch hợp lý.
+
 \subsection{Lịch sử của "Linear Logic"}
 Linear Logic (Logic tuyến tính) được giới thiệu bởi Jean-Yves Girarad năm 1987. Trong khi nguồn gốc của việc phát minh ra logic mới này có từ việc phân tích ngữ nghĩa của các mô hình của System F (phép tính lambda đa hình), ta có thể thầy được toàn hệ thống logic tuyến tính như là một nỗ lực để hòa giải vẻ đẹp và sự đối xứng của hệ thống logic cổ điển với nhu cầu tìm kiếm các phép chứng minh kiến tạo dẩn đã dẫn đến logic ực giác. 
 Logic cổ điển không biểu diễn một số quan hệ nhân quả, nên nếu muốn biểu diễn dạng cộng (additive với phép "and" và "or") cùng với dạng nhân (multiplicative) của phép "and" và "or" mà hai dạng này không tương đương nhau thì ta cần các phép nối mới gồm phép "$\with$" (and dạng cộng), phép "$\oplus$" (or dạng cộng), phép "$\otimes$" (and dạng nhân) và phép "$\parr$" (or dạng nhân).\\
+
+Linear logic (LL) có liên quan chặt chẽ với nhiều logic được xây dựng trước nó. Giáo sư Toán học Joachim Lambek (12/5/1922 – 6/23/2014) đã phát triển nên phép tính Lambek (Lambek calculus), một logic phi giao hoán (noncommutative logic) nhằm để phân tích cấu trúc câu của ngôn ngữ tự nhiên, vài thập kỷ trước khi Girard xây dựng nên LL. Relevance logic và direct logic, đều xuất hiện trước LL tương đối lâu, cũng đã được nghiên cứu khá nhiều khi LL xuất hiện. Một cách đơn giản, có thể nói LL đứng dưới relevance và direct logic, đứng trên Lambek calculus, dựa trên sự bao gồm hay loại trừ một số "quy tắc cấu trúc" ("structural rules") được gọi là làm suy yếu (weakening), làm co lại (contraction), và trao đổi (exchange). Direct logic liên quan chặt chẽ với Affine logic (cũng do Gerrard giới thiệu), là một LL có thêm quy tắc trao đổi không hạn chế (unrestricted exchange rule).\\
+
+LL phát sinh từ việc nghiên cứu ngữ nghĩa của phép kéo theo (implication) trong intuitionistic logic. Girard đã đưa ra hai ngữ nghĩa riêng biệt trong bài viết giới thiệu LL của ông, và việc khám phá các ngữ nghĩa căn bản cho LL vẫn tiếp tục. Lý thuyết chứngg minh LL (LL proof) cũng được đưa ra bởi Girard với sự giới thiệu một chuỗi phép tính (sequent calculus) cho LL, và một ký hiệu thay thế dành cho các chứng minh LL được gọi là lưới chứng minh (proof net). Nhiều vấn đề liên quan đến lưới chứng minh hiện nay vẫn đang được nghiên cứu.\\
 
 Việc có thêm các phép nối này không gây trùng lặp mà thật ra nó giúp ta hiểu sự mâu thuẩn giữa logic cổ điển và logic trục giác một cách rõ ràng hơn.
 
@@ -263,6 +271,100 @@ Trong linear logic, phép đối ngẫu của phép $\with$ là phép tuyển tu
 \subsection{Chi tiết và ví dụ về phép toán ! và phép toán ?}
 Phép toán đơn ngôi "Of course" ! và "why not" !
 
+\section{Bài toán 2}
+\subsection{Mô tả ngữ cảnh bằng lời}
+
+Hiện nay, Game online đang trở thành thể loại game được mọi người yêu thích. Vì vậy, các tựa game luôn phát triển các tính năng sao cho phù hợp với thị hiếu của người chơi. Phần lớn các tựa game online, người chơi sẽ thường sở hữu các vật phẩm (item) có giá trị, được nhận trong quá trình chơi game. Nhưng có một số vật phẩm đó người chơi không sử dụng, và muốn bán lại cho những người chơi khác cần nó. Và kết quả thu được từ việc bán đó chính là tiền ảo trong game, tiền này giúp cho người chơi có thể mua các vật phẩm cần thiết cho bản thân. Tiền ảo này có thể được nạp từ tiền thật… Tuy nhiên, với đại đa số tâm lý người chơi, luôn muốn bán vật phẩm mình với giá cao nhất có thể. Vì vậy đã dẫn đến sự xuất hiện của hệ thống đấu giá sử dụng smart contract để đảm bảo giữa hai người chơi không tin tưởng lẫn nhau có thể giao dịch thành công.\\
+
+	Hệ thống đấu giá sẽ được mô tả như sau: Mỗi vật phẩm (item) thì sẽ có một mã định danh riêng biệt trên toàn server game (chỉ hệ thống mới biết được mã sản phẩm), được cấu tạo là mội đoạn mã như sau: Mã vật phẩm +  Mã ID người sở hữu. Khi người chơi đem vật phẩm của mình lên đấu giá, đầu tiên, hệ thống sẽ lấy vật phẩm của người chơi và lập tức thay đổi mã sản phẩm (xóa đi đoạn mã ID sỡ hữu). Lúc đó, vật phẩm sẽ trở thành vật phẩm không có người sỡ hữu, và được quyền đấu giá.  \\
+	
+Khi vật phẩm được đấu giá, người chơi sẽ quy định giá khởi điểm của sản phẩm. Thời gian đấu giá sản phẩm sẽ do người chơi quy định, thường là theo số giờ (1 giờ, 2 giờ…) và được hủy việc đấu giá trong thời gian đấu giá. Lúc này, vật phẩm sẽ được đăng lên mục đấu giá để cho các người chơi đấu giá. \\
+
+Hình thức đấu giá như sau, các người chơi sẽ tiến hành đấu giá sản phẩm với mức giá cao hơn so với người đấu giá cao nhất hiện tại (nếu trường hợp chưa có mức giá của người đấu giá cao nhất hiện tại, thì mặc định sẽ lấy giá khởi điểm mà chủ vật phẩm quy định). Khi người chơi đấu giá vật phẩm, thì số tiền người chơi sẽ mất đi một lượng bằng đúng với số tiền người đó đấu giá (số tiền người chơi đấu giá phải nhỏ hơn hoặc bằng số tiền mà người chơi đó có). \\
+
+Khi có người đấu giá cao hơn người đấu giá cao nhất, hệ thống sẽ lập tức hoàn trả lại số tiền cho người đấu giá thấp hơn và cập nhật người đấu giá cao nhất, cứ như vậy cho đến khi hết thời gian đấu giá. \\
+
+
+
+Khi hết thời gian đấu giá, có hai trường hợp xảy ra: 
+\begin{itemize}
+    \item Trường hợp 1: vật phẩm không được ai đấu giá, thì lập tức hệ thống sẽ trả lại vật phẩm cho người sỡ hữu. 
+    \item Trường hợp 2: vật phẩm sẽ được hệ thống xử lý mã vật phẩm bằng cách thêm ID người đấu giá thành công vào vật phẩm và gửi về túi đồ của người đấu giá cao nhất, đồng thời người đem vật phẩm đi đấu giá sẽ nhận được tiền ngay lập tức.
+\end{itemize}
+
+\subsection{Các điều khoản với ngữ cảnh được mô tả}
+\label{dieukhoan}
+Tham gia vào các điều khoản có các chủ thể sau:\\
+\begin{center}
+    \begin{tabular}{ll}
+         A: &  Người đem vật phẩm đi đấu giá\\
+         B: &  Người tham gia đấu giá\\
+         C: &  Người đấu giá cao nhất hiện tại\\
+    \end{tabular}
+\end{center}
+%%\vspace{2cm}
+\textbf{Article 1:} Bên A đưa vật phẩm lên phòng đấu giá và đặt thời gian đấu giá t, với giá khởi điểm là x. Vật phẩm sẽ được smart contract giữ lại trong khoảng thời gian t.\\
+\textbf{Article 2:} Trong khoảng thời gian đấu giá, bên A có quyền hủy việc đấu giá. Smart contract sẽ trả lại vật phẩm cho A. Nếu đã có C, thì sẽ hoàn tiền lại cho C.\\
+\textbf{Article 3:} Bên B sẽ tiến hành đấu giá với giá là y, số tiền đấu giá sẽ được smart contract giữ lại.\\
+\textbf{Article 4:}  Khi B đấu giá, thì smart contract sẽ hoàn tiền cho C, và B trở thành C.\\
+\textbf{Article 5:} Số tiền đấu giá của B phải lớn hơn số tiền đấu giá của C tại thời điểm đó hoặc lớn hơn giá khởi điểm x (nếu chưa có ai đấu giá) mà smart contract thông báo.\\
+\textbf{Article 6:} Số tiền đấu giá y không vượt quá số tiền hiện có của bên B.  \\
+\textbf{Article 7:} Hết thời gian times, vật phẩm không ai đấu giá, smart contract sẽ hoàn trả vật phẩm cho bên A.\\
+\textbf{Aritcle 8:} Hết thời gian times, nếu vật phẩm có người đấu giá, smart contract sẽ chuyển vật phẩm cho bên C, và chuyển tiền cho bên A.\\
+
+\section{Bài toán 3}
+Các điều khoản được nêu ra ở mục \hyperref[dieukhoan]{\textbf{2.2}} như sau:
+\begin{itemize}
+    \item B phải đặt số tiền y không vượt quá số tiền hiện có để tham gia đấu giá vật phẩm\\
+    \begin{center}
+        $y \otimes Check(y,B) \multimap bidder$
+    \end{center}
+    
+    \item Khi B tham gia đấu giá đầu tiên (Số tiền đấu giá của B là y, phải lớn hơn số tiền ban đầu là x), smart contract sẽ cập nhật B thành C\\
+    \begin{center}
+        $B \otimes Higher(y,x) \multimap Convert(B, C)$
+    \end{center}
+    
+    \item Khi B tham gia đấu giá (Giá tiền đấu giá của B là yB phải lớn hơn giá tiền đấu giá của C là yC), smart contract tiến hành hoàn tiền cho C, và sau đó chuyển B thành C\\
+    \begin{center}
+        $B \otimes C \otimes Higher(y_{B}, y_{C}) \multimap (Wallet_{C} + y_{C}) \otimes Convert(B,C)$
+    \end{center}
+    
+    \item Smart contract sẽ gửi vật phẩm cho C trong trường hợp đấu giá thành công\\
+    \begin{center}
+        $C \otimes Item \multimap Send(Item,C)$
+    \end{center}
+    
+    \item Trường hợp không ai tham gia đấu giá, smart contract sẽ trả vật phẩm lại cho A\\
+    \begin{center}
+        $A \otimes Item \multimap Return(Item,A)$
+    \end{center}
+    
+    \item Nếu vật phẩm được đấu giá thành công thì smart contract sẽ tự động chuyển tiền cho A\\
+    \begin{center}
+        $(Wallet_{C} + yC) \parr (Wallet_{A} + yC)$
+    \end{center}
+    
+    \item Trong khi chưa hết thời gian đấu giá times, bên A có quyền hủy hợp đồng. Nếu chưa có người đấu giá C, thì smart contract sẽ hoàn lại vật phẩm cho A
+    \begin{center}
+        $Times^{\bot} \otimes Item \otimes C^{\bot} \multimap Return(Item,A)$
+    \end{center}
+    
+    \item Trong khi chưa hết thời gian đấu giá times, bên A có quyền hủy hợp đồng. Nếu có người đấu giá C, thì smart contract sẽ hoàn lại vật phẩm cho A, đồng thời hoàn tiền lại cho C\\
+    \begin{center}
+        $Times^{\bot} \otimes Item \otimes C \multimap Return(Item, A) \otimes (Wallet_{C} + y_{C})$ 
+    \end{center}
+    
+    \item Hết thời gian đấu giá Times , nếu có người đấu giá thì smart contract sẽ chuyển vật phẩm cho C, và chuyển tiền cho A\\
+    \begin{center}
+        $Times \otimes Item \otimes C \multimap (Wallet_{A} + y_{C}) \otimes Send(Item,C)$
+    \end{center}
+    
+    \item Hết thời gian đấu giá Times, nếu không có người đấu giá thì smart contract sẽ hoàn lại vật phẩm cho A\\
+    \begin{center}
+        $Times \otimes Item \otimes C^{\bot} \multimap Return(Item,A)$
+    \end{center}
+\end{itemize}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \addcontentsline{toc}{section}{Tài liệu}
@@ -274,3 +376,4 @@ Phép toán đơn ngôi "Of course" ! và "why not" !
 
 \end{thebibliography}
 \end{document}
+
