--- a/Bao_cao/report_MM.tex
+++ b/Bao_cao/report_MM.tex
@@ -66,7 +66,7 @@
 		\tiny \bf 
 	\end{tabular}  }
 \fancyfoot{} % clear all footer fields
-\fancyfoot[L]{\scriptsize \ttfamily Bài tập lớn môn Cấu trúc Rời rạc cho KHMT (CO1007) - Niên khóa 2015-2016}
+\fancyfoot[L]{\scriptsize \ttfamily Bài tập lớn môn Mô hình hóa Toán học (CO2011), HK2, Năm học 2017-2018}
 \fancyfoot[R]{\scriptsize \ttfamily Trang {\thepage}/\pageref{LastPage}}
 \renewcommand{\headrulewidth}{0.3pt}
 \renewcommand{\footrulewidth}{0.3pt}
@@ -167,7 +167,7 @@ KHOA KHOA HỌC - KỸ THUẬT MÁY TÍNH
 \end{table}
 \vspace{1.2cm}
 \begin{center}
-{\footnotesize Tp. Hồ Chí Minh, Tháng .../2015}
+{\footnotesize Tp. Hồ Chí Minh, Tháng 6/2018}
 \end{center}
 \end{titlepage}
 
