--- a/Bao_cao/report_MM.tex
+++ b/Bao_cao/report_MM.tex
@@ -260,8 +260,15 @@ Trong linear logic, phép đối ngẫu của phép $\with$ là phép tuyển tu
 
 \textbf{Ví dụ \thesubsection.1:} Tương tự với A,B và C ở các ví dụ trên, biểu thức $A \multimap B \parr C$ nghĩa là "có 5000 đồng thì buộc phải chọn giữa 1 chai nước suối hoặc 1 cây bút bí, chứ không chọn cả 2". Trong khi đó biểu thức $A \multimap B \with C$ nghĩa là "có 5000 đồng thì sẽ có 1 chai nước suối hoặc 1 cây bút bi, nhưng không buốc chọn cũng không biết cái nào sẽ được chọn".
 
-\subsection{Chi tiết và ví dụ về phép toán ! và phép toán ?}
+\subsection{Chi tiết và ví dụ về phép toán $\bot$}
+
+\subseciton{Chi tiết và ví dụ về phép toán $\top$}
+
+\subsection{Chi tiết và ví dụ về phép toán !}
 Phép toán đơn ngôi "Of course" ! và "why not" !
+
+\subsection{Chi tiết và ví dụ về phép toán ?}
+
 
 \section{Bài toán 2}
 \subsection{Mô tả ngữ cảnh bằng lời}
