--- a/Bao_cao/report_MM.tex
+++ b/Bao_cao/report_MM.tex
@@ -261,14 +261,13 @@ Trong linear logic, phép đối ngẫu của phép $\with$ là phép tuyển tu
 \textbf{Ví dụ \thesubsection.1:} Tương tự với A,B và C ở các ví dụ trên, biểu thức $A \multimap B \parr C$ nghĩa là "có 5000 đồng thì buộc phải chọn giữa 1 chai nước suối hoặc 1 cây bút bí, chứ không chọn cả 2". Trong khi đó biểu thức $A \multimap B \with C$ nghĩa là "có 5000 đồng thì sẽ có 1 chai nước suối hoặc 1 cây bút bi, nhưng không buốc chọn cũng không biết cái nào sẽ được chọn".
 
 \subsection{Chi tiết và ví dụ về phép toán $\bot$}
-
+In linear logic, there is both additive falsity, denoted 0, and multiplicative falsity, denoted ⊥. Despite the notation, it is 0 that is the bottom element of the lattice of linear truth values. (In particular, 0⊢⊥ but ⊥⊬0.)
 \subseciton{Chi tiết và ví dụ về phép toán $\top$}
-
+In linear logic, there is both additive truth, denoted ⊤, and multiplicative truth, denoted 1. As the notation suggests, it is ⊤ that is the top element of the lattice of linear truth values. (In particular, 1⊢⊤ but ⊤⊬1.)
 \subsection{Chi tiết và ví dụ về phép toán !}
-Phép toán đơn ngôi "Of course" ! và "why not" !
-
+In full linear logic/linear type theory there is assumed a (comonadic) modality denoted “!” and called the exponential modality, whose role is, roughly, to give linear types also a non-linear interpretation. This is also called the “of course”-modality or the storage modality, and sometimes the “bang”-operation.
 \subsection{Chi tiết và ví dụ về phép toán ?}
-
+In classical linear logic (meaning with involutive de Morgan duality), the de Morgan dual of “!” is denoted “?” and called the “why not”-modality.
 
 \section{Bài toán 2}
 \subsection{Mô tả ngữ cảnh bằng lời}
