--- a/Bao_cao/report_MM.tex
+++ b/Bao_cao/report_MM.tex
@@ -284,6 +284,7 @@ Trong linear logic đây đủ, có 1 phương thức (modality) kí hiệu là 
 
 \subsection{Chi tiết và ví dụ về phép toán ?}
 In classical linear logic (meaning with involutive de Morgan duality), the de Morgan dual of “!” is denoted “?” and called the “why not”-modality.
+Torng linear logic cổ điển (có nghĩa với tính hai mặt ngẫu nhiên de Morgan), ký tự de Morgan kép của "!" được biểu diễn là "?" và được gọi là phép toán "why not"
 
 \section{Bài toán 2}
 \subsection{Mô tả ngữ cảnh bằng lời}
