--- a/Bao_cao/report_MM.tex
+++ b/Bao_cao/report_MM.tex
@@ -277,12 +277,12 @@ Trong linear logic, có cách biểu diễn sự sai - cộng, kí hiệu là $0
 Trong linear logic, có cách biểu diễn sự thật - cộng, kí hiệu là $\top$ và cách biểu diện sự thật - nhân $1$. Như cách kí hiệu, $\top$ là phần tử trên cùng của mạng các chân trị tuyến tính. (Cụ thể là $1 \vdash \top$ nhưng $\top \nvdash 1$)
 
 
-\subsection{Chi tiết và ví dụ về phép toán !}
+\subsection{Chi tiết và ví dụ về phép toán $!$}
 %%In full linear logic/linear type theory there is assumed a (comonadic) modality denoted “!” and called the exponential modality, whose role is, roughly, to give linear types also a non-linear interpretation. This is also called the “of course”-modality or the storage modality, and sometimes the “bang”-operation.
 Trong linear logic đây đủ, có 1 phương thức (modality) kí hiệu là $!$ và được gọi là phương thức số mũ. Nó có vai trò là cho chuyển đổi loại tuyến tính sang dạng không tuyến tính. Nó có tên gọi trong tiếng anh là "of course" hay "bang".
 \textbf{Ví dụ \thesubsection.1:}
 
-\subsection{Chi tiết và ví dụ về phép toán ?}
+\subsection{Chi tiết và ví dụ về phép toán $?$}
 %%In classical linear logic (meaning with involutive de Morgan duality), the de Morgan dual of “!” is denoted “?” and called the “why not”-modality.
 Torng linear logic cổ điển (với tính đối ngẫu de Morgan), ký tự de Morgan đối ngẫu của "!" được biểu diễn là "?" và được gọi là phép toán "why not"
 
