--- a/Bao_cao/report_MM.tex
+++ b/Bao_cao/report_MM.tex
@@ -38,6 +38,34 @@
 \renewcommand{\algorithmicrequire}{\textbf{Input:}}
 \renewcommand{\algorithmicensure}{\textbf{Output:}}
 
+\usepackage{listings}
+\usepackage{color}
+ 
+\definecolor{codegreen}{rgb}{0.1,0.1,0.1}
+\definecolor{codegray}{rgb}{0.2,0.2,0.2}
+\definecolor{codepurple}{rgb}{0.58,0,0.82}
+\definecolor{backcolour}{rgb}{0.95,0.95,0.92}
+ 
+\lstdefinestyle{mystyle}{
+    backgroundcolor=\color{backcolour},   
+    commentstyle=\color{codegreen},
+    keywordstyle=\color{magenta},
+    numberstyle=\tiny\color{codegray},
+    stringstyle=\color{codepurple},
+    basicstyle=\footnotesize,
+    breakatwhitespace=false,         
+    breaklines=true,                 
+    captionpos=b,                    
+    keepspaces=true,                 
+    numbers=left,                    
+    numbersep=5pt,                  
+    showspaces=false,                
+    showstringspaces=false,
+    showtabs=false,                  
+    tabsize=2
+}
+ 
+\lstset{style=mystyle}
 
 
 \usetikzlibrary{arrows,snakes,backgrounds}
@@ -421,10 +449,11 @@ Mã giả để lập trình smart contract minh họa cho ngữ cảnh được
 \end{algorithm}
 
 \begin{algorithm}
-\textbf{Input:}  player*owner,item*object\\
+\textbf{Input:}  player*owner,item*object,player*CurPlayer\\
 \textbf{Output:}\\
     \State Object->SP\_id += owner->user\_ID;
 	\State Return (item) to (player who owns that item’s inventory);
+	\State CurPlayer->money $\gets$ CurPlayer->money + amount;
 \caption{cancelAuction}
 \end{algorithm}
 
@@ -441,9 +470,16 @@ Mã giả để lập trình smart contract minh họa cho ngữ cảnh được
         
         \Else
         {
-            \State getMoneyBack(prebuyer,object->price);
-			\State object->price = amount;
-			\State Curbuyer->money -= amount;
+            \If {amount > Curbuyer->money}
+            {
+                \State \textbf{Show} errror " you dont have enough money ! "
+				\State \textbf{Ask} for a new valid amount of money “Please, choose your valid amount”
+            }
+            \Else{
+                \State getMoneyBack(prebuyer,object->price);
+			    \State object->price = amount;
+			    \State Curbuyer->money -= amount;
+			}
         }
     }
     \Else
@@ -462,6 +498,415 @@ Mã giả để lập trình smart contract minh họa cho ngữ cảnh được
 \caption{Auction}
 \end{algorithm}
 
+
+\newpage
+
+
+\section{Bài toán 5}
+\begin{frame}
+\frametitle{AuctionItem.sol}
+\lstset{language=C++,
+                basicstyle=\ttfamily,
+                keywordstyle=\color{blue}\ttfamily,
+                stringstyle=\color{red}\ttfamily,
+                commentstyle=\color{green}\ttfamily,
+                morecomment=[l][\color{magenta}]{\#}
+}
+\begin{lstlisting}[basicstyle=\small]
+pragma solidity ^0.4.24;
+
+import "./DateTime.sol";
+contract AuctionItem
+{
+    address public owner; // nguoi dem vat pham di dau gia
+    uint public auctionEnd; // thoi gian ket thuc
+    DateTime dt;
+
+    // Trang thai hien tai cua qua trinh dau gia
+    address public highestBidder; // nguoi dau gia cao nhat
+    uint public highestBid; // gia dau cao nhat
+    uint public defaultBid; // gia dau khoi diem
+
+    // Cho phep nguoi dau gia thap hon rut tien lai
+    mapping(address => uint) pendingReturns;
+    // Ma vat pham
+    mapping(address => string) itemKey;
+
+    // Cho phep nguoi dem vat pham di dau gia huy ban dau gia.
+    // Neu cuoc ban dau gia khong bi huy thi se duoc gan gia tri true khi
+    // ket thuc phien dau gia nham khong cho phep su can thiep sau thoi han.
+    bool ended = false;
+
+    // Cac su kien trong phien dau gia
+    /// Gia dau tang!
+    event HighestBidIncreased(address bidder, uint amount);
+    /// Ket thuc!
+    event AuctionEnded(address winner, uint amount);
+
+    /// Tao mot hop dong dau gia thong minh voi thoi gian dau gia la
+    /// '_biddingTime' giay, muc gia khoi diem la '_defaultBid' Ether
+    /// , vat pham co ma dinh danh '_itemKey'
+    /// nguoi dem vat pham di dau gia co dia chi '_owner'.
+    /// Thoi gian dau gia co the duoc dieu chinh lai.
+    constructor(
+        uint _biddingTime,
+        address _owner,
+        uint _defaultBid,
+        string _itemKey,
+        address addrDatetime
+    ) public {
+        owner = _owner;
+        auctionEnd = now + _biddingTime;
+        highestBid = _defaultBid;
+        defaultBid = _defaultBid;
+        itemKey[owner] = _itemKey;
+        dt = DateTime(addrDatetime);
+    }
+
+    /// Thay doi tinh trang hop dong boi nguoi dem vat pham di dau gia
+    modifier onlyBy(address account) {
+        require(
+            msg.sender == account,
+            "Khong co quyen thuc hien."
+        );
+        _;
+    }
+    
+    /// Huy phien dau gia hien tai!
+    function cancel() public onlyBy(owner){
+        ended = true;
+        // Tra tien lai cho nguoi dau gia
+        if (highestBid != defaultBid) {
+            // De nguoi choi tu rut tien
+            pendingReturns[highestBidder] += highestBid;
+            delete highestBidder;
+            highestBid = defaultBid;
+        }
+    }
+    
+    /// Kich hoat lai phien dau gia!
+    function activeAgain() public onlyBy(owner) {
+        // Chi duoc kich hoat lai khi con thoi gian dau gia.
+        require(now <= auctionEnd, "Khong the kich hoat lai.");
+        ended = false;
+    }
+    
+    /// Dat thoi gian ket thuc dau gia neu muon thoi gian dau gia keo dai hon.
+    function alterAuctionEndTime (
+        uint16 year, 
+        uint8 month, 
+        uint8 day, 
+        uint8 hour,
+        uint8 minute,
+        uint8 second
+    ) public
+      onlyBy(owner)
+    {
+        uint timeStamp = 
+            dt.toTimestamp(year, month, day, hour, minute, second);
+	require(
+	    timeStamp > auctionEnd
+	    , "Thoi han moi khong lon hon thoi han ban dau!"
+	);
+	auctionEnd = timeStamp;
+    }
+
+    /// Dau gia voi so tien di kem giao dich nay.
+    /// Tien chi duoc hoan lai neu ban khong thang.
+    function bid() public payable {
+        
+        // Huy giao dich neu qua han.
+        require(
+            now <= auctionEnd,
+            "Phien dau gia ket thuc!"
+        );
+        
+        // Phien dau gia phai dang trong qua trình hoat dong
+        require(
+            !ended,
+            "Vat pham da bi huy ban dau gia!"
+        );
+
+        // Khong chap nhan muc gia thap hon muc gia dau hien tai.
+        require(
+            msg.value > highestBid,
+            "Da co gia dau cao hon!!"
+        );
+        
+        // Nguoi choi phai dam bao co du tien.
+        require(
+            msg.value <= msg.sender.balance,
+            "Ban khong du tien de tham gia!"
+        );
+
+        if (highestBid != defaultBid) {
+            // Nguoi choi co gia dau thap hon co the tu rut tien lai
+            pendingReturns[highestBidder] += highestBid;
+        }
+        highestBidder = msg.sender;
+        highestBid = msg.value;
+        emit HighestBidIncreased(msg.sender, msg.value);
+    }
+
+    /// Rut tien trong truong hop co nguoi khac tra cao hon.
+    function withdraw() public returns (bool) {
+        uint amount = pendingReturns[msg.sender];
+        if (amount > 0) {
+            // Dat lai ve 0 de tranh truong hop gian lan rut nhieu lan.
+            pendingReturns[msg.sender] = 0;
+            
+            // Neu rut tien khong thanh cong
+            if (!msg.sender.send(amount)) {
+                // Xem nhu chua rut.
+                pendingReturns[msg.sender] = amount;
+                return false;
+            }
+        }
+        return true;
+    }
+
+    /// Ket thuc phien dau gia, gui tien cho nguoi đem vat phẩm đi đấu giá,
+    /// gui ma vat pham cho nguoi thang cuoc.
+    function auctionEnd() public {
+        // 1. Conditions
+        require(now >= auctionEnd, "Phien dau gia chu ket thuc.");
+        require(!ended, "Phien dau gia khong hoat dong.");
+
+        // 2. Effects
+        ended = true;
+        emit AuctionEnded(highestBidder, highestBid);
+
+        // 3. Interaction
+        // Neu co nguoi dau gia
+		if (highestBid != defaultBid) {
+    		owner.transfer(highestBid);
+    		itemKey[highestBidder] = itemKey[owner];
+    		itemKey[owner] = "";
+		}
+		// else do nothing
+		// Thuc te thi he thong se tra lai vat pham cho nguoi dem no di dau gia.
+    }
+}
+\end{lstlisting}
+\end{frame}
+
+\begin{frame}
+\frametitle{DateTime.sol}
+\lstset{language=C++,
+                basicstyle=\ttfamily,
+                keywordstyle=\color{blue}\ttfamily,
+                stringstyle=\color{red}\ttfamily,
+                commentstyle=\color{green}\ttfamily,
+                morecomment=[l][\color{magenta}]{\#}
+}
+\begin{lstlisting}[basicstyle=\small]
+pragma solidity ^0.4.24;
+
+contract DateTime {
+
+    struct _DateTime {
+        uint16 year;
+        uint8 month;
+        uint8 day;
+        uint8 hour;
+        uint8 minute;
+        uint8 second;
+        uint8 weekday;
+    }
+
+    uint constant DAY_IN_SECONDS = 86400;
+    uint constant YEAR_IN_SECONDS = 31536000;
+    uint constant LEAP_YEAR_IN_SECONDS = 31622400;
+
+    uint constant HOUR_IN_SECONDS = 3600;
+    uint constant MINUTE_IN_SECONDS = 60;
+
+    uint16 constant ORIGIN_YEAR = 1970;
+
+    function isLeapYear(uint16 year) public pure returns (bool) {
+        if (year % 4 != 0) {
+            return false;
+        }
+        if (year % 100 != 0) {
+            return true;
+        }
+        if (year % 400 != 0) {
+            return false;
+        }
+        return true;
+    }
+
+    function leapYearsBefore(uint year) public pure returns (uint) {
+        year -= 1;
+        return year / 4 - year / 100 + year / 400;
+    }
+
+    function getDaysInMonth(uint8 month, uint16 year) public pure returns (uint8) {
+        if (month == 1 || month == 3 || month == 5 || month == 7 || month == 8 || month == 10 || month == 12) {
+            return 31;
+        }
+        else if (month == 4 || month == 6 || month == 9 || month == 11) {
+            return 30;
+        }
+        else if (isLeapYear(year)) {
+            return 29;
+        }
+        else {
+            return 28;
+        }
+    }
+    
+    function parseTimestamp(uint timestamp) internal pure returns (_DateTime dt) {
+        uint secondsAccountedFor = 0;
+        uint buf;
+        uint8 i;
+
+        // Year
+        dt. year = getYear(timestamp);
+        buf = leapYearsBefore(dt. year) - leapYearsBefore(ORIGIN_YEAR);
+
+        secondsAccountedFor += LEAP_YEAR_IN_SECONDS * buf;
+        secondsAccountedFor += YEAR_IN_SECONDS * (dt. year - ORIGIN_YEAR - buf);
+
+        // Month
+        uint secondsInMonth;
+        for (i = 1; i <= 12; i ++) {
+            secondsInMonth = DAY_IN_SECONDS * getDaysInMonth (i, dt.year);
+            if (secondsInMonth + secondsAccountedFor > timestamp) {
+                dt. month = i;
+                break;
+            }
+            secondsAccountedFor += secondsInMonth;
+        }
+
+        // Day
+        for (i = 1; i <= getDaysInMonth(dt.month, dt.year); i ++) {
+            if (DAY_IN_SECONDS + secondsAccountedFor > timestamp) {
+                dt.day = i;
+                break;
+            }
+            secondsAccountedFor += DAY_IN_SECONDS;
+        }
+
+        // Hour
+        dt.hour = getHour(timestamp);
+
+        // Minute
+        dt.minute = getMinute(timestamp);
+
+        // Second
+        dt.second = getSecond(timestamp);
+
+        // Day of week .
+        dt.weekday = getWeekday(timestamp);
+    }
+
+    function getYear(uint timestamp) public pure returns (uint16) {
+        uint secondsAccountedFor = 0;
+        uint16 year;
+        uint numLeapYears;
+        // Year
+        year = uint16(ORIGIN_YEAR + timestamp / YEAR_IN_SECONDS);
+        numLeapYears = leapYearsBefore(year) - leapYearsBefore(ORIGIN_YEAR);
+        secondsAccountedFor += LEAP_YEAR_IN_SECONDS * numLeapYears;
+        secondsAccountedFor += YEAR_IN_SECONDS * (year - ORIGIN_YEAR - numLeapYears);
+        while (secondsAccountedFor > timestamp) {
+            if (isLeapYear(uint16(year - 1))) {
+                secondsAccountedFor -= LEAP_YEAR_IN_SECONDS;
+            }
+            else {
+                secondsAccountedFor -= YEAR_IN_SECONDS;
+            }
+            year -= 1;
+        }
+        return year;
+    }
+    
+    function getMonth(uint timestamp) public pure returns (uint8) {
+        return parseTimestamp(timestamp).month;
+    }
+    
+    function getDay(uint timestamp) public pure returns (uint8) {
+        return parseTimestamp(timestamp).day;
+    }
+    
+    function getHour(uint timestamp) public pure returns (uint8) {
+        return uint8((timestamp / 60 / 60) % 24);
+    }
+    
+    function getMinute(uint timestamp) public pure returns (uint8) {
+        return uint8((timestamp / 60) % 60);
+    }
+    
+    function getSecond(uint timestamp) public pure returns (uint8) {
+        return uint8(timestamp % 60);
+    }
+    
+    function getWeekday(uint timestamp) public pure returns (uint8) {
+        return uint8 ((timestamp / DAY_IN_SECONDS + 4) % 7);
+    }
+    
+    function toTimestamp(uint16 year, uint8 month, uint8 day) public pure returns (uint timestamp) {
+         return toTimestamp(year, month, day, 0, 0, 0);
+    }
+    
+    function toTimestamp (uint16 year, uint8 month, uint8 day, uint8 hour) public pure returns (uint timestamp) {
+        return toTimestamp(year, month, day, hour, 0, 0);
+    }
+    
+    function toTimestamp(uint16 year, uint8 month, uint8 day, uint8 hour, uint8 minute) public pure returns (uint timestamp) {
+        return toTimestamp(year, month, day, hour, minute, 0);
+    }
+    
+    function toTimestamp(uint16 year, uint8 month, uint8 day, uint8 hour, uint8 minute, uint8 second) public pure returns (uint timestamp) {
+        uint16 i;
+
+        // Year
+        for (i = ORIGIN_YEAR; i < year; i ++) {
+            if (isLeapYear(i)) {
+                timestamp += LEAP_YEAR_IN_SECONDS;
+            }
+            else {
+                timestamp += YEAR_IN_SECONDS;
+            }
+        }
+        // Month
+        uint8[12] memory monthDayCounts;
+        monthDayCounts[0] = 31;
+        if (isLeapYear(year)) {
+            monthDayCounts[1] = 29;
+        }
+        else {
+            monthDayCounts[1] = 28;
+        }
+        monthDayCounts[2] = 31;
+        monthDayCounts[3] = 30;
+        monthDayCounts[4] = 31;
+        monthDayCounts[5] = 30;
+        monthDayCounts[6] = 31;
+        monthDayCounts[7] = 31;
+        monthDayCounts[8] = 30;
+        monthDayCounts[9] = 31;
+        monthDayCounts[10] = 30;
+        monthDayCounts[11] = 31;
+        for (i = 1; i < month ; i ++) {
+            timestamp += DAY_IN_SECONDS * monthDayCounts[i - 1];
+        }
+        // Day
+        timestamp += DAY_IN_SECONDS * (day - 1);
+        // Hour
+        timestamp += HOUR_IN_SECONDS * (hour);
+        // Minute
+        timestamp += MINUTE_IN_SECONDS * (minute);
+        // Second
+        timestamp += second;
+        return timestamp;
+    }
+}
+\end{lstlisting}
+\end{frame}
+
+
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \newpage
 \addcontentsline{toc}{section}{Tài liệu}
@@ -479,4 +924,3 @@ Mã giả để lập trình smart contract minh họa cho ngữ cảnh được
 
 \end{thebibliography}
 \end{document}
-
